<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/et_productList_searchProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner_edittext"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:singleLine="true"
        android:hint= "@string/search_products" />

    <RelativeLayout
        android:id="@+id/ll_productList_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/et_productList_searchProducts">
        <TextView
            android:id="@+id/tv_productList_productHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/ll_productList_vatnPriceHeader"
            android:text="@string/product"
            android:layout_marginRight="0.5dp"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingBottom="10dp"
            android:background="@color/white"/>
        <LinearLayout
            android:id="@+id/ll_productList_vatnPriceHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:weightSum="2">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.5dp"
                android:layout_marginRight="0.5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/vat_percent"
                android:gravity="center"
                android:background="@color/white"/>
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.5dp"
                android:layout_marginRight="0.5dp"
                android:text="@string/price"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:background="@color/white"/>
        </LinearLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_products_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_productList_header"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/bg_button"
        app:borderWidth="0dp"
        android:elevation="0dp"/>
    <TextView
        android:id="@+id/fab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="16dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</FrameLayout>

    <TextView
        android:id="@+id/tv_no_result_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_result_found"
        android:textSize="25sp"
        android:layout_below="@+id/ll_productList_header"
        android:gravity="center"
        android:visibility="gone"/>
</RelativeLayout>