<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.myapplication.fragments.TransactionGeneratedFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/transaction_success"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_no"
                android:textSize="16dp"
                android:textColor="@color/navy_blue"/>
            <TextView
                android:id="@+id/transaction_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20180123471"
                android:textSize="25dp"
                android:textColor="@color/navy_blue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/transaction_for"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/transaction_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:textSize="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <TextView
                        android:id="@+id/btn_view_receipt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:background="@color/bg_button"
                        android:text="@string/view_receipt"
                        android:textSize="15dp"
                        android:minLines="2"
                        android:maxLines="2"
                        android:textColor="@color/white"
                        />

                    <TextView
                        android:id="@+id/btn_new_transaction"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:minLines="2"
                        android:maxLines="2"
                        android:background="@color/bg_button"
                        android:gravity="center"
                        android:text="@string/new_transaction"
                        android:textSize="15dp"
                        android:textColor="@color/white"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/btn_download_receipt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="gone"
                    android:background="@color/bg_button"
                    android:text="@string/download_receipt"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:padding="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>